# realworld-backend/src/articles/dto/create-bookmark.dto.ts
@@ -4,16 +4,16 @@ import {
   IsString,
 } from 'class-validator';
 
-export class EditBookmarkDto {
+export class CreateArticleDto {
   @IsString()
-  @IsOptional()
-  title?: string;
+  @IsNotEmpty()
+  title: string;
 
   @IsString()
   @IsOptional()
   description?: string;
 
   @IsString()
-  @IsOptional()
-  link?: string;
+  @IsNotEmpty()
+  link: string;
 }
