# realworld-backend/src/articles/dto/edit-bookmark.dto.ts
@@ -4,16 +4,16 @@ import {
   IsString,
 } from 'class-validator';
 
-export class CreateBookmarkDto {
+export class EditArticleDto {
   @IsString()
-  @IsNotEmpty()
-  title: string;
+  @IsOptional()
+  title?: string;
 
   @IsString()
   @IsOptional()
   description?: string;
 
   @IsString()
-  @IsNotEmpty()
-  link: string;
+  @IsOptional()
+  link?: string;
 }
